--- a/ECE105/playground/playground.ipynb
+++ b/ECE105/playground/playground.ipynb
@@ -47,9 +47,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'x' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\dgoul\\Desktop\\masterworks\\ECE105\\playground\\playground.ipynb Cell 3\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/dgoul/Desktop/masterworks/ECE105/playground/playground.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/dgoul/Desktop/masterworks/ECE105/playground/playground.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mcsv\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/dgoul/Desktop/masterworks/ECE105/playground/playground.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m gram \u001b[39m=\u001b[39m plt\u001b[39m.\u001b[39mhist(x, bins\u001b[39m=\u001b[39m\u001b[39m50\u001b[39m,stacked\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,fill\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m,histtype\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mstep\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'x' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -59,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -77,6 +89,103 @@
     "x = [1, 1]\n",
     "print(np.exp(x))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Instance:\n",
+      "|   9 4       1 3   |\n",
+      "|                   |\n",
+      "|         7 6     2 |\n",
+      "|   8     1         |\n",
+      "|   3 2             |\n",
+      "|       2       6   |\n",
+      "|         5   4     |\n",
+      "|           8     7 |\n",
+      "|     6 3   4     8 |\n",
+      "hi there[[0 9 4 0 0 0 1 3 0]\n",
+      " [0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 7 6 0 0 2]\n",
+      " [0 8 0 0 1 0 0 0 0]\n",
+      " [0 3 2 0 0 0 0 0 0]\n",
+      " [0 0 0 2 0 0 0 6 0]\n",
+      " [0 0 0 0 5 0 4 0 0]\n",
+      " [0 0 0 0 0 8 0 0 7]\n",
+      " [0 0 6 3 0 4 0 0 8]]bye\n",
+      "len i9\n",
+      "here with00\n",
+      "post search True and {'row': 0, 'col': 0}\n",
+      "[[2 9 4 0 0 0 1 3 0]\n",
+      " [0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 7 6 0 0 2]\n",
+      " [0 8 0 0 1 0 0 0 0]\n",
+      " [0 3 2 0 0 0 0 0 0]\n",
+      " [0 0 0 2 0 0 0 6 0]\n",
+      " [0 0 0 0 5 0 4 0 0]\n",
+      " [0 0 0 0 0 8 0 0 7]\n",
+      " [0 0 6 3 0 4 0 0 8]]\n",
+      "validFalse\n",
+      "[[5 9 4 0 0 0 1 3 0]\n",
+      " [0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 7 6 0 0 2]\n",
+      " [0 8 0 0 1 0 0 0 0]\n",
+      " [0 3 2 0 0 0 0 0 0]\n",
+      " [0 0 0 2 0 0 0 6 0]\n",
+      " [0 0 0 0 5 0 4 0 0]\n",
+      " [0 0 0 0 0 8 0 0 7]\n",
+      " [0 0 6 3 0 4 0 0 8]]\n",
+      "validFalse\n",
+      "[[6 9 4 0 0 0 1 3 0]\n",
+      " [0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 7 6 0 0 2]\n",
+      " [0 8 0 0 1 0 0 0 0]\n",
+      " [0 3 2 0 0 0 0 0 0]\n",
+      " [0 0 0 2 0 0 0 6 0]\n",
+      " [0 0 0 0 5 0 4 0 0]\n",
+      " [0 0 0 0 0 8 0 0 7]\n",
+      " [0 0 6 3 0 4 0 0 8]]\n",
+      "validFalse\n",
+      "[[7 9 4 0 0 0 1 3 0]\n",
+      " [0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 7 6 0 0 2]\n",
+      " [0 8 0 0 1 0 0 0 0]\n",
+      " [0 3 2 0 0 0 0 0 0]\n",
+      " [0 0 0 2 0 0 0 6 0]\n",
+      " [0 0 0 0 5 0 4 0 0]\n",
+      " [0 0 0 0 0 8 0 0 7]\n",
+      " [0 0 6 3 0 4 0 0 8]]\n",
+      "validFalse\n",
+      "[[8 9 4 0 0 0 1 3 0]\n",
+      " [0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 7 6 0 0 2]\n",
+      " [0 8 0 0 1 0 0 0 0]\n",
+      " [0 3 2 0 0 0 0 0 0]\n",
+      " [0 0 0 2 0 0 0 6 0]\n",
+      " [0 0 0 0 5 0 4 0 0]\n",
+      " [0 0 0 0 0 8 0 0 7]\n",
+      " [0 0 6 3 0 4 0 0 8]]\n",
+      "validFalse\n",
+      "Solution:\n",
+      "|   9 4       1 3   |\n",
+      "|                   |\n",
+      "|         7 6     2 |\n",
+      "|   8     1         |\n",
+      "|   3 2             |\n",
+      "|       2       6   |\n",
+      "|         5   4     |\n",
+      "|           8     7 |\n",
+      "|     6 3   4     8 |\n",
+      "Verify: False\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
